* Add console colour support
* Fix round the tps
* Fix factions compatiblity
* Add amour variables