@@ -66,6 +66,15 @@
 
         <dependency>
             <groupId>.</groupId>
+            <artifactId>SimpleClans2</artifactId>
+            <version>2.4.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/SimpleClans-2.4.1.jar</systemPath>
+            <type>jar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>.</groupId>
             <artifactId>InSigns</artifactId>
             <version>1.4</version>
             <scope>system</scope>
