@@ -2,3 +2,4 @@
 * Fix round the tps
 * Fix factions compatiblity
 * Add amour variables
+* Fix SimpleClans 2 issue
